--- a/emerpki/emerpki/emerpki.csproj
+++ b/emerpki/emerpki/emerpki.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Ipfs.Http.Client" Version="0.33.0" />
       <PackageReference Include="JsonRPC" Version="1.0.1" />
       <PackageReference Include="System.Console" Version="4.3.1" />
+      <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
     </ItemGroup>
 
 </Project>
