--- a/emerpki/emerpki/emerpki.csproj
+++ b/emerpki/emerpki/emerpki.csproj
@@ -8,10 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BouncyCastle.Cryptography" Version="2.3.1" />
       <PackageReference Include="Ipfs.Http.Client" Version="0.33.0" />
-      <PackageReference Include="JsonRPC" Version="1.0.1" />
+      <PackageReference Include="SQLite" Version="3.13.0" />
       <PackageReference Include="System.Console" Version="4.3.1" />
-      <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
     </ItemGroup>
 
 </Project>
