--- a/emerpki/Testing/Testing.csproj
+++ b/emerpki/Testing/Testing.csproj
@@ -14,8 +14,8 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="FsCheck" Version="2.16.6" />
-        <PackageReference Include="FsCheck.Xunit" Version="2.16.6" />
+        <PackageReference Include="FsCheck" Version="3.0.0-rc3" />
+        <PackageReference Include="FsCheck.Xunit" Version="3.0.0-rc3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="xunit" Version="2.8.0" />
     </ItemGroup>
