--- a/emerpki/DecenKeep/DecenKeep.csproj
+++ b/emerpki/DecenKeep/DecenKeep.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
       <PackageReference Include="BouncyCastle.Cryptography" Version="2.3.1" />
       <PackageReference Include="System.Console" Version="4.3.1" />
       <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
