Added Cid Generator for testing ipfs access methods

--- a/emerpki/CustomGenerators/CustomGenerators.fsproj
+++ b/emerpki/CustomGenerators/CustomGenerators.fsproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <Compile Include="ByteArrayGenerator.fs" />
+        <Compile Include="CidGenerator.fs" />
     </ItemGroup>
 
     <ItemGroup>
